[gd_scene load_steps=5 format=3 uid="uid://dnnw35vu5k0xd"]

[ext_resource type="Script" path="res://src/scenes/components/settings_modal.gd" id="1_emrt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_krldl"]
content_margin_left = 120.0
content_margin_top = 40.0
content_margin_right = 120.0
content_margin_bottom = 40.0
bg_color = Color(0, 0, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25s12"]
content_margin_left = 40.0
content_margin_top = 20.0
content_margin_right = 40.0
content_margin_bottom = 20.0
bg_color = Color(0.211765, 0.239216, 0.290196, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_758s1"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0

[node name="SettingsModal" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_krldl")
script = ExtResource("1_emrt0")

[node name="Modal" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_25s12")

[node name="VBoxContainer" type="VBoxContainer" parent="Modal"]
layout_mode = 2

[node name="Label" type="Label" parent="Modal/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/VBoxContainer"]
layout_mode = 2
tooltip_text = "Directory where Godot executable is saved. They should start with the default name: Godot_v"

[node name="Label" type="Label" parent="Modal/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Godot Dir"

[node name="GodotDirEdit" type="LineEdit" parent="Modal/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Modal/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Modal/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Categories"

[node name="AddButton" type="Button" parent="Modal/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="ScrollContainer" type="ScrollContainer" parent="Modal/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_758s1")
horizontal_scroll_mode = 0

[node name="Categories" type="VBoxContainer" parent="Modal/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="Modal/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Save"
